--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://abhaych335_db_user:2goV92ftBgIonDMc@db1.zhn4to2.mongodb.net/?appName=Db1
+MONGO_URI=mongodb+srv://abhaych335_db_user:2goV92ftBgIonDMc@db1.zhn4to2.mongodb.net/myDatabase?retryWrites=true&w=majority&appName=Db1
