--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "license": "ISC",
   "author": "abhaych335",
   "type": "module",
-  "main": "index.js",
+  "main": "./api/index.js",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node ./api/index.js",
+    "dev": "nodemon ./api/index.js"
   },
   "dependencies": {
     "bcrypt": "^6.0.0",
